// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server side render can have two components in the same render tree 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderCount2": 1,
  "renderProps1": Object {
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "result": Object {
      "hasData": false,
    },
    "status": "Fetching",
  },
  "renderProps2": Object {
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "result": Object {
      "hasData": false,
    },
    "status": "Fetching",
  },
}
`;

exports[`server side render does not render on the server if clientLoadOnlySet 1`] = `
Object {
  "existingData": undefined,
  "loadAllCompletedCalled": 0,
  "loadDataCount": 0,
  "renderActions": undefined,
  "renderCount": 0,
  "renderProps": undefined,
}
`;

exports[`server side render second SSR with two components in same tree uses data 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 0,
  "renderCount": 1,
  "renderCount2": 1,
  "renderProps1": Object {
    "lastAction": Object {
      "success": true,
      "type": "initial-fetch",
    },
    "result": Object {
      "data": Object {
        "result": "Success!",
      },
      "dataFromServerSideRender": true,
      "hasData": true,
    },
    "status": "Idle",
  },
  "renderProps2": Object {
    "lastAction": Object {
      "success": true,
      "type": "initial-fetch",
    },
    "result": Object {
      "data": Object {
        "result": "Success!",
      },
      "dataFromServerSideRender": true,
      "hasData": true,
    },
    "status": "Idle",
  },
}
`;

exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "existingData": undefined,
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderActions": Object {
    "refresh": [Function],
    "update": [Function],
  },
  "renderCount": 1,
  "renderProps": Object {
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "result": Object {
      "hasData": false,
    },
    "status": "Fetching",
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "existingData": undefined,
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderActions": Object {
    "refresh": [Function],
    "update": [Function],
  },
  "renderCount": 1,
  "renderProps": Object {
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "result": Object {
      "hasData": false,
    },
    "status": "Fetching",
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "existingData": undefined,
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderActions": Object {
    "refresh": [Function],
    "update": [Function],
  },
  "renderCount": 1,
  "renderProps": Object {
    "lastAction": Object {
      "success": true,
      "type": "none",
    },
    "result": Object {
      "hasData": false,
    },
    "status": "Fetching",
  },
}
`;
